// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PasswordField matches snapshot for empty field 1`] = `
<div>
  <div
    class="field"
  >
    <input
      class="input"
      data-headlessui-state=""
      id="snap-pwd-empty"
      name="password"
      type="password"
      value=""
    />
    <button
      aria-label="Show password"
      aria-pressed="false"
      class="iconButton ghost square sm toggle"
      data-headlessui-state=""
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-eye"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.75"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`PasswordField matches snapshot when disabled 1`] = `
<div>
  <div
    class="field"
  >
    <input
      class="input"
      data-disabled=""
      data-headlessui-state="disabled"
      disabled=""
      id="snap-pwd-disabled"
      name="password"
      type="password"
      value="secret"
    />
    <button
      aria-label="Show password"
      aria-pressed="false"
      class="iconButton ghost square sm toggle"
      data-disabled=""
      data-headlessui-state="disabled"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-eye"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.75"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`PasswordField matches snapshot when password is visible 1`] = `
<div>
  <div
    class="field"
  >
    <input
      class="input"
      data-headlessui-state=""
      id="snap-pwd-visible"
      name="password"
      type="text"
      value="secret"
    />
    <button
      aria-label="Hide password"
      aria-pressed="true"
      class="iconButton ghost square sm toggle"
      data-headlessui-state=""
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-eye-off"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.75"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
        />
        <path
          d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
        />
        <path
          d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
        />
        <path
          d="m2 2 20 20"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`PasswordField matches snapshot with value 1`] = `
<div>
  <div
    class="field"
  >
    <input
      autocomplete="new-password"
      class="input"
      data-headlessui-state=""
      id="snap-pwd"
      name="password"
      type="password"
      value="secret"
    />
    <button
      aria-label="Show password"
      aria-pressed="false"
      class="iconButton ghost square sm toggle"
      data-headlessui-state=""
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-eye"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.75"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </button>
  </div>
</div>
`;
